# FoxRenderPlayground

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  ReadMe.md  resource_paths.txt
setup/: build_installer.py  compile_shaders.py  requirements.txt
setup/installer/: __init__.py  base.py  cmake_builder.py  install_gui.py  vulkan_installer.py
shaders/test_triangle/: mul-triangle.vert  test_triangle.vert
src/: CMakeLists.txt  main.cpp
src/Common/: Core.h  DefineVulkan.h  DefineWindows.h  FObject.h  FxMemory.h  ObjectID.h
src/Engine/: FoxPlayground.cpp  FoxPlayground.h
src/Engine/DependencyResolver/: DependencyResolver.cpp  DependencyResolver.h
src/ExceptionHandler/: IException.cpp  IException.h  WindowException.cpp  WindowException.h
src/Interface/: IEngine.h  IFrame.h  IGfxObject.h  ISingleton.h  ISystem.h
src/RenderManager/: RenderManager.cpp  RenderManager.cpp~  RenderManager.h
src/RenderManager/Components/: FxDevice.cpp  FxDevice.h  FxInstance.cpp  FxInstance.h  FxPhysicalDevice.cpp  FxPhysicalDevice.h
src/RenderManager/Core/: FxMemory.h
src/Utils/: Helper.h
src/Utils/FileSystem/: FileSystem.cpp  FileSystem.h
src/Utils/Logger/: Logger.cpp  Logger.h
src/Utils/Timer/: Timer.h
src/WindowsManager/: WindowsManager.cpp  WindowsManager.h
src/WindowsManager/Inputs/: InputKeyboardSingleton.cpp  InputKeyboardSingleton.h  KeyboardSingleton.cpp  KeyboardSingleton.h  MouseSingleton.cpp  MouseSingleton.h
